--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,23 @@ code {
   font-size: 15px;
 }
 
+.currentDeckTankListItemHighlight {
+  border: 5px solid black;
+  height: 80px;
+  width: 55px;
+  border-radius: 20px;
+  padding-right: 5px;
+  padding-left: 5px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 1px;
+  margin-right: 0px;
+  margin-left: 0px;
+  font-size: 15px;
+  background: green;
+}
+
 .currentDeckTankListItem:hover {
   background: rgba(135, 206, 250, 0.500);
   color: #FFF;
