--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ code {
   box-sizing: border-box;
 }
 
-.currentDeckPoints{
+.totalPoints{
   /* height: 100px; */
   width: 320px;
   border-radius: 20px;
@@ -38,15 +38,41 @@ code {
   padding-left: 10px;
 }
 
+.pointHoverInfo {
+  position: relative;
+  display: inline-block;
+}
+
+.pointHoverInfo .pointHoverInfoText {
+  visibility: hidden;
+  width: 350px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 1px 0;
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: -80%;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.pointHoverInfo:hover .pointHoverInfoText {
+  visibility: visible;
+  opacity: 1;
+}
+
  /* The Modal (background) */
  .settings-modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 2; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 2;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  width: 100%;
+  height: 100%;
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -147,8 +173,36 @@ code {
 
 .flex-container {
   column-count:2;
-  column-gap: normal;
+  column-gap: 0%;
   column-width: 50%;
+  width: 100%;
+}
+
+.cardHoverInfo {
+  position: relative;
+  display: inline-block;
+}
+
+.cardHoverInfo .cardHoverInfoText {
+  visibility: hidden;
+  width: 350px;
+  height: 140px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: -160px;
+  left: -190%;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.cardHoverInfo:hover .cardHoverInfoText {
+  visibility: visible;
+  opacity: 1;
 }
 
 .currentDeckTankList {
