--- a/src/index.css
+++ b/src/index.css
@@ -409,6 +409,35 @@ code {
   opacity: 1;
 }
 
+.equipSort {
+  border: 5px solid black;
+  /* height: auto; */
+  width: auto;
+  border-radius: 20px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 1px;
+  padding-right: 1px;
+  margin: auto;
+  margin-bottom: 5px
+}
+
+.equipSortItem {
+  border: 5px solid black;
+  height: 80px;
+  width: 55px;
+  border-radius: 20px;
+  padding-right: 5px;
+  padding-left: 5px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 1px;
+  margin-right: 0px;
+  margin-left: 0px;
+  font-size: 15px;
+}
+
 .DisplayTanksEquipCardList{
   border: 5px solid black;
   height: auto;
