--- a/src/index.css
+++ b/src/index.css
@@ -358,12 +358,28 @@ code {
   border-radius: 10px;
 }
 
-.crewSlotButton{
+.crewSlot{
   white-space: normal;
   word-wrap: break-word;
   cursor: default;
 }
 
+.crewSlotButton{
+  white-space: normal;
+  word-wrap: break-word;
+  cursor: default;
+  border-color:green;
+  border-radius: 5px;
+}
+
+.crewSlotButton-disable{
+  white-space: normal;
+  word-wrap: break-word;
+  cursor: default;
+  pointer-events: none;
+  border-color:red;
+  border-radius: 5px;
+}
 
  /* The Modal (background) */
  .equip-modal {
@@ -400,6 +416,45 @@ code {
 
 .equip-modal-close:hover,
 .equip-modal-close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.equip-prompt-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 2; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.equip-prompt-content {
+  background-color: whitesmoke;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
+  color: black;
+  z-index: 1; /* Sit on top */
+}
+
+/* The Close Button */
+.equip-prompt-close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.equip-prompt-close:hover,
+.equip-prompt-close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -575,20 +630,6 @@ code {
 .profileListItemSelected {
   border: 4px solid red;
   border-radius: 10px;
-}
-
-.button {
-  border: 5px solid black;
-  height: 300px;
-  width: 400px;
-  border-radius: 20px;
-  padding-right: 10px;
-  padding-left: 10px;
-  padding-bottom: 4px;
-  margin-top: 15px;
-  margin-bottom: 10px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .profile-button-group button {
