--- a/src/index.css
+++ b/src/index.css
@@ -623,12 +623,17 @@ code {
 }
 
 .profileListItem {
-  border: 1px solid black;
+  border: 4px solid black;
   border-radius: 10px;
 }
 
 .profileListItemSelected {
   border: 4px solid red;
+  border-radius: 10px;
+}
+
+.profileListItemCurrent {
+  border: 4px solid green;
   border-radius: 10px;
 }
 
