--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,6 @@ code {
 }
 .currentDeckName{
   border: 5px solid black;
-  /* height: 100px; */
   width: 350px;
   border-radius: 20px;
   padding-right: 10px;
@@ -113,7 +112,7 @@ code {
 }
 
 .bi-arrow-right-square:hover {
-  color: red;
+  color: green;
 }
 
 .starterHoverInfo {
@@ -172,6 +171,62 @@ code {
 .starterHoverInfo:hover .starterHoverInfoHelpText {
   visibility: visible;
   opacity: 1;
+}
+
+ /* The switch - the box around the slider */
+ .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
 
 .flex-container {
