--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,6 @@ code {
   opacity: 1;
 }
 
- /* The Modal (background) */
  .settings-modal {
   display: none;
   position: fixed;
@@ -73,11 +72,10 @@ code {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
 .settings-modal-content {
   background-color: whitesmoke;
   margin: 15% auto;
@@ -173,7 +171,6 @@ code {
   opacity: 1;
 }
 
- /* The switch - the box around the slider */
  .switch {
   position: relative;
   display: inline-block;
@@ -181,14 +178,12 @@ code {
   height: 34px;
 }
 
-/* Hide default HTML checkbox */
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -318,25 +313,24 @@ input:checked + .slider:before {
 }
 
 .currentDeckTankListItem-modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
 .currentDeckTankListItem-modal-content {
   background-color: white;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 50%; /* Could be more or less, depending on screen size */
+  width: 50%;
   background-color: #282c34;
   border-radius: 10px;
   color: white
@@ -444,7 +438,6 @@ input:checked + .slider:before {
   border-width: 4px;
 }
 
- /* The Modal (background) */
  .equip-modal {
   display: none;
   position: fixed;
@@ -454,11 +447,10 @@ input:checked + .slider:before {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
 .equip-modal-content {
   background-color: whitesmoke;
   margin: 15% auto;
@@ -471,7 +463,6 @@ input:checked + .slider:before {
   color: white
 }
 
-/* The Close Button */
 .equip-modal-close {
   color: white;
   float: right;
@@ -487,32 +478,30 @@ input:checked + .slider:before {
 }
 
 .equip-prompt-modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 2; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 2;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
 .equip-prompt-content {
   background-color: whitesmoke;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 50%; /* Could be more or less, depending on screen size */
-  z-index: 1; /* Sit on top */
+  width: 50%;
+  z-index: 1;
   background-color: #282c34;
   border-radius: 10px;
   color: white
 }
 
-/* The Close Button */
 .equip-prompt-close {
   color: white;
   float: right;
@@ -705,19 +694,19 @@ input:checked + .slider:before {
 }
 
 .profile-button-group button {
-  background-color: gray; /* Green background */
-  border: 1px solid black; /* Green border */
+  background-color: gray;
+  border: 1px solid black;
   border-radius: 10px;
   margin-left: 4px;
   margin-right: 4px;
-  color: white; /* White text */
-  padding: 10px 24px; /* Some padding */
-  cursor: pointer; /* Pointer/hand icon */
-  float: left; /* Float the buttons side by side */
+  color: white;
+  padding: 10px 24px;
+  cursor: pointer;
+  float: left;
 }
 
 .profile-button-group button:not(:last-child) {
-  border-right: none; /* Prevent double borders */
+  border-right: none;
 }
 
 /* Clear floats (clearfix hack) */
@@ -727,7 +716,6 @@ input:checked + .slider:before {
   display: table;
 }
 
-/* Add a background color on hover */
 .profile-button-group button:hover {
   background: rgba(135, 206, 250, 0.500);
 }
