--- a/src/index.css
+++ b/src/index.css
@@ -391,7 +391,8 @@ input:checked + .slider:before {
 .crewSlots {
   border: 5px solid black;
   border-radius: 20px;
-  width: 560px;
+  min-width :auto;
+  max-width: 560px;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
@@ -583,7 +584,8 @@ input:checked + .slider:before {
 .DisplayTanksEquipCardList{
   border: 5px solid black;
   height: auto;
-  width: 390px;
+  min-width: auto;
+  max-width: 390px;
   border-radius: 20px;
   padding-right: 10px;
   padding-left: 10px;
